Updated file with additional code and resolved warnings

--- a/ML-model-3.ipynb
+++ b/ML-model-3.ipynb
@@ -1240,8 +1240,7 @@
     "    accuracy_scores.append(accuracy)\n",
     "    precision_scores.append(precision)\n",
     "    recall_scores.append(recall)\n",
-    "    f1_scores.append(f1)  \n",
-    "\n"
+    "    f1_scores.append(f1)  "
    ]
   },
   {
